feat: add initial Spanish, German, and English localization files

--- a/kitchenowl/lib/l10n/app_de.arb
+++ b/kitchenowl/lib/l10n/app_de.arb
@@ -7,6 +7,7 @@
   "@accountDeleteConfirmation": {},
   "@accountLinkedWithOtherUser": {},
   "@accountsLinked": {},
+  "@advanced": {},
   "@add": {},
   "@addCategory": {},
   "@addDescriptionFromSource": {},
@@ -791,5 +792,28 @@
   "yes": "Ja",
   "yesterday": "Gestern",
   "yields": "Portionen",
-  "you": "du"
+  "you": "du",
+  "loyaltyCards": "Karten",
+  "loyaltyCardsEmpty": "Noch keine Kundenkarten. Füge eine hinzu, um loszulegen!",
+  "loyaltyCardAdd": "Karte hinzufügen",
+  "loyaltyCardEdit": "Karte bearbeiten",
+  "loyaltyCardNameHint": "z.B. Rewe, Edeka",
+  "loyaltyCardDeleteConfirmation": "Möchtest du {name} wirklich löschen?",
+  "barcodeData": "Barcodedaten",
+  "barcodeDataHint": "Barcodenummer eingeben",
+  "barcodeType": "Barcodetyp",
+  "copyBarcode": "Barcode kopieren",
+  "scanBarcode": "Barcode scannen",
+  "scanFromCamera": "Mit Kamera scannen",
+  "scanFromGallery": "Aus Bild importieren",
+  "pointCameraAtBarcode": "Kamera auf Barcode richten",
+  "barcodeDetected": "Barcode erkannt",
+  "autoDetected": "automatisch erkannt",
+  "enterManually": "Manuell eingeben",
+  "flashOn": "Blitz an",
+  "flashOff": "Blitz aus",
+  "switchCamera": "Kamera wechseln",
+  "noBarcodesFound": "Keine Barcodes im Bild gefunden",
+  "webcam": "Webcam",
+  "advanced": "Erweitert"
 }
