--- a/kitchenowl/lib/l10n/app_en.arb
+++ b/kitchenowl/lib/l10n/app_en.arb
@@ -7,6 +7,7 @@
   "@accountDeleteConfirmation": {},
   "@accountLinkedWithOtherUser": {},
   "@accountsLinked": {},
+  "@advanced": {},
   "@add": {},
   "@addCategory": {},
   "@addDescriptionFromSource": {},
@@ -896,5 +897,6 @@
   "gallery": "Gallery",
   "@gallery": {},
   "keepScreenOn": "Screen stays on for scanning",
-  "@keepScreenOn": {}
+  "@keepScreenOn": {},
+  "advanced": "Advanced"
 }
