--- a/kitchenowl/lib/l10n/app_es.arb
+++ b/kitchenowl/lib/l10n/app_es.arb
@@ -7,6 +7,7 @@
   "@accountDeleteConfirmation": {},
   "@accountLinkedWithOtherUser": {},
   "@accountsLinked": {},
+  "@advanced": {},
   "@add": {},
   "@addCategory": {},
   "@addDescriptionFromSource": {},
@@ -798,5 +799,28 @@
   "yes": "Sí",
   "yesterday": "Ayer",
   "yields": "Raciones",
-  "you": "tu"
+  "you": "tu",
+  "loyaltyCards": "Tarjetas",
+  "loyaltyCardsEmpty": "Aún no hay tarjetas de fidelidad. ¡Añade una para empezar!",
+  "loyaltyCardAdd": "Añadir tarjeta",
+  "loyaltyCardEdit": "Editar tarjeta",
+  "loyaltyCardNameHint": "ej. Mercadona, Carrefour",
+  "loyaltyCardDeleteConfirmation": "¿Seguro que quieres borrar {name}?",
+  "barcodeData": "Datos del código de barras",
+  "barcodeDataHint": "Introduce el número del código de barras",
+  "barcodeType": "Tipo de código de barras",
+  "copyBarcode": "Copiar código de barras",
+  "scanBarcode": "Escanear código de barras",
+  "scanFromCamera": "Escanear con la cámara",
+  "scanFromGallery": "Importar desde imagen",
+  "pointCameraAtBarcode": "Apunta la cámara al código de barras",
+  "barcodeDetected": "Cógido de barras detectado",
+  "autoDetected": "auto-detectado",
+  "enterManually": "Introducir manualmente",
+  "flashOn": "Flash encendido",
+  "flashOff": "Flash apagado",
+  "switchCamera": "Cambiar cámara",
+  "noBarcodesFound": "No se han encontrado códigos de barras en la imagen",
+  "webcam": "Webcam",
+  "advanced": "Avanzado"
 }
