feat: Implement loyalty card import, household update cubit, and new UI components including a color picker and import settings dialog.

--- a/kitchenowl/lib/l10n/app_en.arb
+++ b/kitchenowl/lib/l10n/app_en.arb
@@ -780,6 +780,7 @@
   "shoppingListEmpty": "The shopping list is empty. Add an item using the search function above.",
   "shoppingListStyle": "Shopping list style",
   "shoppingLists": "Shopping lists",
+  "showLoyaltyCardsButton": "Show Loyalty Cards Button",
   "signInWith": "Sign in with {provider}",
   "signup": "Sign up",
   "skip": "Skip",
